projecten page responsive gemaakt voor max width van 690px

--- a/overmij.html
+++ b/overmij.html
@@ -29,4 +29,14 @@
 
         <p>hier komen alle skills en dingen over mij . </p>
     </div>
+    <div>
+        <p> betrouwbaar
+        </p>
+    </div>
+    <div>
+        <p> doorzetter</p>
+    </div>
+    <div>
+        <p>samenwerken</p>
+    </div>
 </body>
