--- a/projecten.html
+++ b/projecten.html
@@ -28,6 +28,27 @@
         <div class="flexbox-container2">
             <p> Dit zijn de grootste projecten waar ik het afgelopen 2 jaar mee heb gewerkt en waar ik heel trots op ben. </p>
         </div>
-        <button class="button button4" onclick="location.href=''">make it rain</button>
-        <button class="button button5" onclick="location.href=''"> Wulfies</button>
+        <!-- <button class="button button4" onclick="location.href">make it rain</button> -->
+        <div class="row">
+
+
+        </div>
+        </button>
+        <div class="row">
+            <div class="column">
+                <a href="#">
+                    <div class="wulfies">
+                        <img src="./wulfies.png" width="320" height="170" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a href="#">
+                    <div class="rg">
+                        <img src="./RG.png" alt="">
+                    </div>
+                </a>
+            </div>
+        </div>
+
 </body>
