style veranderd van homepage en logo veranderd van mezelf

--- a/projecten.html
+++ b/projecten.html
@@ -36,14 +36,14 @@
         </button>
         <div class="row">
             <div class="column">
-                <a href="#">
+                <a href="wulfies.html">
                     <div class="wulfies">
                         <img src="./wulfies.png" width="320" height="170" alt="">
                     </div>
                 </a>
             </div>
             <div class="column">
-                <a href="#">
+                <a href="http://30442@30442.hosts1.ma-cloud.nl/make_it_rain/Website/index.html">
                     <div class="rg">
                         <img src="./RG.png" alt="">
                     </div>
