--- a/overmij.html
+++ b/overmij.html
@@ -39,4 +39,10 @@
     <div>
         <p>samenwerken</p>
     </div>
+    <div>
+        <p>HTML</p>
+    </div>
+    <div>
+        <p>CSS</p>
+    </div>
 </body>
