--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,18 @@
         <div class="button3"> <a href="overmij.html" target="_blank">Overmij</a></div>
     </div>
 
-    <div class="portfolio-image">
-        <div class='flexbox-container'>
-            <h1>Sem Thijssen
-            </h1>
+
+    <div class='flexbox-container'>
+        <h1> Portfolio van Sem Thijssen
+        </h1>
+        <img src="sem-thijssen.png" alt="Cinque Terre" width="300" height="100">
 
 
-        </div>
 
-        <div class="flexbox-container2">
-            <h2>Welkom</h2>
-            <p>Bij mijn portfolio, mijn naam is Sem Thijssen en wil graag mijn Projecten met u delen die ik de afgelopen jaren heb gemaakt Om mijn projecten te bekijken klik je rechtsboven op projecten Wil je meer over mij weten en mijn skills? Klik dan
-                op de knop Rechtsboven over mij. </p>
-        </div>
+
+
+    </div>
+
+    <div class='flexbox-container2'>
+
 </body>
