projectenpage eruit gehaald style van homepage veranderd wulfies.css en wulfies.html aangemaakt.

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <div class="topnav">
         <a class="active" href="portfolio.html">home</a>
-        <div class="button3"> <a href="projecten.html" target="_blank">Projecten</a></div>
+
         <div class="button3"> <a href="overmij.html" target="_blank">Overmij</a></div>
     </div>
 
@@ -29,6 +29,24 @@
 
     </div>
 
-    <div class='flexbox-container2'>
+    <h3>projecten waar ik aan gewerkt heb.</h3>
+
+    <div class="row">
+        <div class="column">
+            <a href="wulfies.html">
+                <div class="wulfies">
+                    <img src="./wulfies.png" alt="" width="320" height="170">
+                </div>
+            </a>
+        </div>
+        <div class="column">
+            <a href="http://30442@30442.hosts1.ma-cloud.nl/make_it_rain/Website/index.html">
+                <div class="rg">
+                    <img src="RG.png" alt="" width="300" height="100">
+
+                </div>
+            </a>
+        </div>
+
 
 </body>
