--- a/wulfies.html
+++ b/wulfies.html
@@ -13,14 +13,19 @@
 <body>
     <div class="topnav">
         <div class="button3"> <a href="portfolio.html" target="_blank">Home</a></div>
-        <div class="button3"> <a href="projecten.html" target="_blank">Projecten</a></div>
-        <a class="active" href="overmij.html">Overmij</a>
+
+        <div class="button3"> <a href="overmij.html" target="_blank">Overmij</a></div>
     </div>
 
 
     <img src="wulfies.png" alt="">
+    <div class="button button1">
+        <a href="https://github.com/jesseboon04/Wulfies">
+            <p1>github</p1>
+        </a>
+    </div>
 
-    <button class="button button1"></button>
+
 
     </div>
 
