--- a/overmij.html
+++ b/overmij.html
@@ -13,7 +13,7 @@
 <body>
     <div class="topnav">
         <div class="button3"> <a href="portfolio.html" target="_blank">Home</a></div>
-        <div class="button3"> <a href="projecten.html" target="_blank">Projecten</a></div>
+
         <a class="active" href="overmij.html">Overmij</a>
     </div>
 
@@ -30,19 +30,8 @@
         <p>hier komen alle skills en dingen over mij . </p>
     </div>
     <div>
-        <p> betrouwbaar
+        <p>ik heb de meeste projecten gedaan met de programeertalen html en css. Daarnaast sta ik erg open om nieuwe dingen toe te voegen als het gaat om ideeën of andere zaken. ik ben niet alleen goed in mijn werk, ik ben ook vriendelijk en sociaal op de
+            werkvloer.
         </p>
-    </div>
-    <div>
-        <p> doorzetter</p>
-    </div>
-    <div>
-        <p>samenwerken</p>
-    </div>
-    <div>
-        <p>HTML</p>
-    </div>
-    <div>
-        <p>CSS</p>
-    </div>
+
 </body>
