--- a/projecten.html
+++ b/projecten.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -28,7 +28,7 @@
         <div class="flexbox-container2">
             <p> Dit zijn de grootste projecten waar ik het afgelopen 2 jaar mee heb gewerkt en waar ik heel trots op ben. </p>
         </div>
-        <!-- <button class="button button4" onclick="location.href">make it rain</button> -->
+      
         <div class="row">
 
 
@@ -51,4 +51,4 @@
             </div>
         </div>
 
-</body>
+</body> -->
