een knop gemaakt dat zorgt dat je naar github gaat

--- a/wulfies.html
+++ b/wulfies.html
@@ -19,11 +19,7 @@
 
 
     <img src="wulfies.png" alt="">
-    <div class="button button1">
-        <a href="https://github.com/jesseboon04/Wulfies">
-            <p1>github</p1>
-        </a>
-    </div>
+    
 
 
 
@@ -37,6 +33,12 @@
             <p>dit is een website van een eige bedachte bedrijf dat gaat over kinderen maar ook ouders te leren hoe om te gaan met mensen en/of kinderen met een verstandelijke beperking.Het doel hiervan is om 'alle' mensen bij elkaar te brengen. Wat hierna
                 mijn doel is voor mijn bedrijf is om er een animatieserie ervan te maken omdat het dan niet alleen leerzaam is maar ook leuk om te kijken.
             </p>
+           <button type="button" class="button"> 
+            <span class="button__text"> github</span>
+            <span class="button__icon">
+             <ion-icon name="logo-github"></ion-icon>
+            </span></button>
+          <script src="https://unpkg.com/ionicon@5.5.2/dist/ionicons/"></script>
         </div>
 
 
