contactform pop up aanmaken

--- a/overmij.html
+++ b/overmij.html
@@ -18,7 +18,7 @@
     </div>
 
 
-    <img src="skills.png" alt="">
+    <img src="sem-thijssen.png" alt="Cinque Terre" width="300" height="100">
 
 
 
@@ -26,12 +26,14 @@
     </div>
 
     <div class="flexbox-container2">
-
-        <p>hier komen alle skills en dingen over mij . </p>
+       
     </div>
+    <button class="open-button" onclick="openForm()"><p1>Open Form</p1></button>
     <div>
         <p>ik heb de meeste projecten gedaan met de programeertalen html en css. Daarnaast sta ik erg open om nieuwe dingen toe te voegen als het gaat om ideeën of andere zaken. ik ben niet alleen goed in mijn werk, ik ben ook vriendelijk en sociaal op de
             werkvloer.
         </p>
-
+<script>function openform(){
+    document.getElementById("myForm").style.display = "block";
+}</script>
 </body>
