projecten erin met kleine omschrijving en button

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,25 +31,34 @@
 
 
     <h3>projecten waar ik aan gewerkt heb.</h3>
+    <section class="container">
+        <div class="card"><div class="card-image wulfies"></div>
+    <h2> Wulfies</h2>
+    <p>Animatieserie idee dat ik zelf heb bedacht.</p>
+    <a href="./wulfies.html">
+    <button type="button" class="button">
+        <span class="button__text">leer meer</span> </button>
+    </a>
+    </div>
+    <div class="card"><div class="card-image interactieve_speeltuin"></div>
+    <h2> interactieve speeltuin</h2>
+    <p> Ik werkte hier met andere opleidingen.</p>
+    <a href="./interactieve_speeltuin.html">
+        <button type="button" class="button">
+            <span class="button__text">leer meer</span> </button>
+        </a>
+    </div>
+    <div class="card"><div class="card-image RG"></div>
+    <h2> Make it rain </h2>
+    <p>Hier maakte ik mijn eerste eigen website.</p>
+    <a href="./rg.html">
+        <button type="button" class="button">
+            <span class="button__text">leer meer</span> </button>
+        </a>
+    </div>
 
-    <div class="row">
-        <div class="column">
-            <button><a href="wulfies.html">
-                <div class="wulfies">
-                    <img src="./wulfies.png" alt="" width="320" height="170">
-                </div>
-            </a></button>
-            
-        </div>
-        <div class="column">
-            
-            <button1><a href="http://30442@30442.hosts1.ma-cloud.nl/make_it_rain/Website/index.html">
-                <div class="rg">
-                    <img src="RG.png" alt="" width="300" height="100">
-
-                </div>
-            </a></button1>
-        </div>
 
 
-</body>
+    </section>
+
+  
