interactieve speeltuin en rg met foto's erin gezet en contact form werkend

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
 
     <div class='flexbox-container'>
         <h1> Portfolio van Sem Thijssen
+            <p1>frontend-developer</p1>
         </h1>
         
 
@@ -30,22 +31,22 @@
     <img src="sem-thijssen.png" alt="Cinque Terre" width="300" height="100">
 
 
-    <h3>projecten waar ik aan gewerkt heb.</h3>
+    <h3>Projecten waar ik aan gewerkt heb:</h3>
     <section class="container">
         <div class="card"><div class="card-image wulfies"></div>
     <h2> Wulfies</h2>
     <p>Animatieserie idee dat ik zelf heb bedacht.</p>
     <a href="./wulfies.html">
     <button type="button" class="button">
-        <span class="button__text">leer meer</span> </button>
+        <span class="button__text">Leer meer</span> </button>
     </a>
     </div>
     <div class="card"><div class="card-image interactieve_speeltuin"></div>
-    <h2> interactieve speeltuin</h2>
+    <h2> Interactieve speeltuin</h2>
     <p> Ik werkte hier met andere opleidingen.</p>
     <a href="./interactieve_speeltuin.html">
         <button type="button" class="button">
-            <span class="button__text">leer meer</span> </button>
+            <span class="button__text">Leer meer</span> </button>
         </a>
     </div>
     <div class="card"><div class="card-image RG"></div>
@@ -53,12 +54,34 @@
     <p>Hier maakte ik mijn eerste eigen website.</p>
     <a href="./rg.html">
         <button type="button" class="button">
-            <span class="button__text">leer meer</span> </button>
+            <span class="button__text">Leer meer</span> </button>
         </a>
     </div>
 
 
 
     </section>
+<div class="footer-container">
+    <div class="footer">
+        <div class="footer-heading footer-1">
+            <h2>Over mij</h2>
 
+        </div>
+        <div class="footer-heading footer-2">
+            <h2>Sociale media</h2>
+            <a href="interactieve_speeltuin.html">Instagram</a>
+            <a href="interactieve_speeltuin.html">facebook</a>
+            <a href="interactieve_speeltuin.html">Youtube</a>
+        </div>
+       <div class="footer-email-form"></div>
+       <h2> Stuur mij uw bericht.</h2>
+       <form action="https://formsubmit.co/Sem.thijssen@upcmail.nl" method="POST">
+        <input type="hidden" name="_subject" value="New submission!">
+        <input type="email" name="email" placeholder="Email Address" required>
+        <input type="hidden" name="_next" value="overmij.html">
+        <input type="text" name="bericht" placeholder="type hier je bericht"required>
+     <button type="submit">Send</button>
+   </form>
+    </div>
+</div>
   
