--- a/interactieve_speeltuin.html
+++ b/interactieve_speeltuin.html
@@ -5,7 +5,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="rg.css" />
+    <link rel="stylesheet" href="interactieve_speeltuin.css" />
 
 
 </head>
@@ -18,7 +18,7 @@
     </div>
 
 
-    <img src="RG.png" alt="">
+    <img src="basquiat.jpeg" alt="basquiat">
     
 
 
