--- a/overmij.html
+++ b/overmij.html
@@ -28,12 +28,31 @@
     <div class="flexbox-container2">
        
     </div>
+    <div class="form-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
+       <h1>contact</h1>
+<label for="firstname"><b>firstname</b></label>
+<input type="text" placeholder="enter firstname" name="firstname" required>
+<label for="surname"><b>surname</b></label>
+<input type="text" placeholder="enter surname" name="surname" required>
+<label for="email"><b>email</b></label>
+<input type="text" placeholder="enter email" name="email" required>
+<label for="message"><b>message</b></label>
+<input type="text" placeholder="message" name="message" required>
+<button type="submit" class="btn">Login</button>
+<button type="button" class="btn cancel"></button>
+
+    </div>
     <button class="open-button" onclick="openForm()"><p1>Open Form</p1></button>
     <div>
-        <p>ik heb de meeste projecten gedaan met de programeertalen html en css. Daarnaast sta ik erg open om nieuwe dingen toe te voegen als het gaat om ideeën of andere zaken. ik ben niet alleen goed in mijn werk, ik ben ook vriendelijk en sociaal op de
-            werkvloer.
+        <p>Ik doe graag frontend omdat ik het niet alleen het beste in ben, maar ook omdat ik het leuk vind om de dingen aan de voorkant te maken van een website dus de design en de dingen die je kunt zien.
+        Ik heb ervaringen met html css en javascript, maar zou het liefst alleen met html en css bezig zijn omdat ik die het interresants vindt.
         </p>
+        
 <script>function openform(){
     document.getElementById("myForm").style.display = "block";
+}
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
 }</script>
 </body>
