alle pages en contact pagina gemaakt

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
         <a class="active" href="portfolio.html">home</a>
 
         <div class="button3"> <a href="overmij.html" target="_blank">Overmij</a></div>
+        <div class="button3"> <a href="contact.html" target="_blank">Contact</a></div>
     </div>
 
 
@@ -63,25 +64,12 @@
     </section>
 <div class="footer-container">
     <div class="footer">
-        <div class="footer-heading footer-1">
-            <h2>Over mij</h2>
-
-        </div>
         <div class="footer-heading footer-2">
             <h2>Sociale media</h2>
             <a href="interactieve_speeltuin.html">Instagram</a>
             <a href="interactieve_speeltuin.html">facebook</a>
-            <a href="interactieve_speeltuin.html">Youtube</a>
+            <a href="interactieve_speeltuin.html">LinkedIn</a>
         </div>
-       <div class="footer-email-form"></div>
-       <h2> Stuur mij uw bericht.</h2>
-       <form action="https://formsubmit.co/Sem.thijssen@upcmail.nl" method="POST">
-        <input type="hidden" name="_subject" value="New submission!">
-        <input type="email" name="email" placeholder="Email Address" required>
-        <input type="hidden" name="_next" value="overmij.html">
-        <input type="text" name="bericht" placeholder="type hier je bericht"required>
-     <button type="submit">Send</button>
-   </form>
     </div>
 </div>
   
