--- a/rg.html
+++ b/rg.html
@@ -14,7 +14,7 @@
     <div class="topnav">
         <div class="button3"> <a href="portfolio.html" target="_blank">Home</a></div>
 
-        <div class="button3"> <a href="overmij.html" target="_blank">Overmij</a></div>
+        <div class="button3"> <a href="overmij.html" target="_blank">Over mij</a></div>
     </div>
 
 
@@ -41,7 +41,7 @@
         </div>
         <div class="row">
             <div class="column">
-        <img src="Wulfies_wireframe_homepage.png" alt="" style="margin-left: -400px; width:400px ; height:900px;">
+        <img src="Wulfies_wireframe_homepage.png" alt="" style=" padding-left: 290px; margin-left: -400px; width:400px ; height:900px;">
         <div class="column"><div class="text-container"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi placeat, corrupti iure deleniti laboriosam obcaecati delectus vero aspernatur. Ullam, animi ipsum! Eveniet quaerat modi enim obcaecati, totam perspiciatis voluptate? Alias.</p></div>
            
             </div>
@@ -50,7 +50,7 @@
           </div>
           <div class="row">
             <div class="column">
-        <img src="CodeWulfies.png" alt="" style="margin-left: -400px; width:400px ; height:450px;">
+        <img src="CodeWulfies.png" alt="" style= "padding-left:290px;margin-left: -400px; width:400px ; height:450px;">
         <div class="column"><div class="text-container2"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi placeat, corrupti iure deleniti laboriosam obcaecati delectus vero aspernatur. Ullam, animi ipsum! Eveniet quaerat modi enim obcaecati, totam perspiciatis voluptate? Alias.</p></div>
            
             </div>
