contact page gemaakt en de alle andere pagina's aangepast

--- a/overmij.html
+++ b/overmij.html
@@ -42,10 +42,13 @@
            <p>  -CSS</p>
             <p> -Javascript.</p>
         
-<script>function openform(){
-    document.getElementById("myForm").style.display = "block";
-}
-function closeForm() {
-  document.getElementById("myForm").style.display = "none";
-}</script>
-</body>
+            <div class="footer-container">
+                <div class="footer">
+                    <div class="footer-heading footer-2">
+                        <h2>Sociale media</h2>
+                        <a href="interactieve_speeltuin.html">Instagram</a>
+                        <a href="interactieve_speeltuin.html">facebook</a>
+                        <a href="interactieve_speeltuin.html">LinkedIn</a>
+                    </div>
+                </div>
+            </div>
