--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,13 @@
     <div class="footer">
         <div class="footer-heading footer-2">
             <h2>Sociale media</h2>
-            <a href="interactieve_speeltuin.html">Instagram</a>
-            <a href="interactieve_speeltuin.html">facebook</a>
-            <a href="interactieve_speeltuin.html">LinkedIn</a>
+            <div class="row">
+                <div class="column">
+                    <div class="column"><a href="interactieve_speeltuin.html">Instagram</a>
+                     <a href="interactieve_speeltuin.html">facebook</a>
+                  <a href="interactieve_speeltuin.html">LinkedIn</a>
         </div>
     </div>
 </div>
-  
+    </div>
+</div>
