--- a/rg.html
+++ b/rg.html
@@ -29,10 +29,7 @@
 
     <div class="flexbox-container3">
         <div class="flexbox-container7">
-            <p>Deze website is afkomstig van een fictief bedrijf. De website gaat over verschillende verstandelijke beperkingen/diagnoses, zoals autisme. De website is bestemd voor de doelgroep gezinnen. Het doel van de website is gezinnen informatie te verschaffen over diverse verstandelijke beperkingen, zodat er handvatten worden gebonden hoe om te gaan met deze verstandelijke beperkingen. 
-                Mijn uiteindelijke peresoonlijke doel is een animatieserie te realiseren over dit onderwerp, omdat er een stigma heerst op verstandelijke beperkingen.
-                 
-            </p><section class="buttons"><button type="button" class="button"> 
+            <p>Bij deze opdracht moesten we onze eigen website maken van onze eigen keuze hierin had ik eerst moeite mee omdat ik nog nooit alleen een website heb gebouwd maar met hulp van andere mensen van school heb ik het er het best van kunnen maken.</p><section class="buttons"><button type="button" class="button"> 
                 <span class="button__text"> github</span>
                </button>
                <button type="button2" class="button2"> 
@@ -42,7 +39,7 @@
         <div class="row">
             <div class="column">
         <img src="Wulfies_wireframe_homepage.png" alt="" style=" padding-left: 290px; margin-left: -400px; width:400px ; height:900px;">
-        <div class="column"><div class="text-container"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi placeat, corrupti iure deleniti laboriosam obcaecati delectus vero aspernatur. Ullam, animi ipsum! Eveniet quaerat modi enim obcaecati, totam perspiciatis voluptate? Alias.</p></div>
+        <div class="column"><div class="text-container"><p></p></div>
            
             </div>
         </div>
