--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <div class="topnav">
         <a class="active" href="portfolio.html">home</a>
 
-        <div class="button3"> <a href="overmij.html" target="_blank">Overmij</a></div>
+        <div class="button3"> <a href="overmij.html" target="_blank">Over mij</a></div>
         <div class="button3"> <a href="contact.html" target="_blank">Contact</a></div>
     </div>
 
@@ -68,11 +68,10 @@
             <h2>Sociale media</h2>
             <div class="row">
                 <div class="column">
-                    <div class="column"><a href="interactieve_speeltuin.html">Instagram</a>
-                     <a href="interactieve_speeltuin.html">facebook</a>
-                  <a href="interactieve_speeltuin.html">LinkedIn</a>
-        </div>
-    </div>
-</div>
-    </div>
-</div>
+                    <div class="column"><a href="https://www.instagram.com/thijssensem/">Instagram</a>
+                        <a href="https://www.facebook.com/sem.thijssen.98">Facebook</a>
+                     <a href="https://www.linkedin.com/in/sem-thijssen-35603b221/">LinkedIn</a>
+           </div>
+       </div>
+   </div>
+ 
